--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ThumbnailTool</title>
+  <title>YouTube Thumbnail Downloader - Free HD Thumbnail Download Tool</title>
+  <meta name="description" content="Download YouTube thumbnails in HD, SD, or 4K instantly. Free, fast, and easy to use YouTube Thumbnail Downloader tool.">
+  <meta name="keywords" content="youtube thumbnail downloader, download youtube thumbnail, get youtube thumbnail, youtube hd thumbnail, online youtube thumbnail">
+    <meta name="robots" content="index, follow">
+
+      <meta property="og:title" content="YouTube Thumbnail Downloader - Free HD Thumbnail Download Tool" />
+  <meta property="og:description" content="Download YouTube video thumbnails in HD instantly. Free and fast YouTube thumbnail downloader tool." />
+ <!-- <meta property="og:image" content="https://yourdomain.com/assets/og-thumbnail.jpg" /> -->
+  <!-- <meta property="og:url" content="https://yourdomain.com/" /> -->
+  <meta property="og:type" content="website" />
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/logo.png">
 </head>
 <body>
   <app-root></app-root>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "YouTube Thumbnail Downloader",
+  "description": "Free online YouTube thumbnail downloader to download video thumbnails in HD or 4K.",
+  "applicationCategory": "Multimedia",
+  "operatingSystem": "All",
+}
+</script>
+  <!-- "url": "https://yourdomain.com", -->
+
 </body>
 </html>
