--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/logo.png">
 </head>
+  <script src="https://fpyf8.com/88/tag.min.js" data-zone="180180" async data-cfasync="false"></script>
 <body>
   <app-root></app-root>
   <script type="application/ld+json">
