--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
   <link rel="icon" type="image/x-icon" href="./assets/logo.png">
 </head>
   <!-- <script src="https://fpyf8.com/88/tag.min.js" data-zone="180180" async data-cfasync="false"></script> -->
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5082228684780948"
+     crossorigin="anonymous"></script>
 <body>
   <app-root></app-root>
   <script type="application/ld+json">
